package net.combatserver.protobuf; 
option optimize_for = SPEED;  
message ZoneMessageRequestData{
	required string message = 1;//ÄÚÈİ
}